Change name to "ByteNote"

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>C57note64</name>
+	<name>ByteNote</name>
 	<comment></comment>
 	<projects>
 	</projects>
