Fix bug stopping the program from test when changes have been saved.
Add "runJar" target to build.xml

--- a/build.xml
+++ b/build.xml
@@ -18,6 +18,10 @@
 		<pathelement location="${build.bin}/"/>
 	</path>
 	
+	<target depends="buildJar" name="runJar">
+		<java jar="${build.jar.dir}/${build.jar.name}" fork="true" />
+	</target>
+	
 	<target depends="buildJar" name="default">
 		
 	</target>
