--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project basedir="." default="default" name="ByteNote">
+<project basedir="." default="default" name="ByteNote" xmlns:fx="javafx:com.sun.javafx.tools.ant">
 	<property environment="env"/>
 	<property name="ECLIPSE_HOME" value="../../../../../eclipse/java-neon/eclipse/"/>
 	<property name="debuglevel" value="source,lines,vars"/>
@@ -9,7 +9,6 @@
 	<property name="build.version" value="v2.0.0-alpha"/>
 	<property name="build.dir" value="${basedir}/build"/>
 	<property name="build.bin" value="${basedir}/bin"/>
-	<property name="build.logo" value="${build.src}/bytenote/logo32.png"/>
 	<property name="build.src.releaseNotes" value="${build.src}/bytenote/releaseNotes.html"/>
 	<property name="build.jar.dir" value="${build.dir}/jar"/>
 	<property name="build.jar.name" value="${ant.project.name}_${build.version}.jar"/>
@@ -22,8 +21,20 @@
 	<property name="build.win32bit.exeInstaller.name" value="${ant.project.name}_${build.version}-windows-32bit"/>
 	<property name="build.win32bit.exeUpdate.dir" value="${build.win32bit.dir}/exeUpdate"/>
 	<property name="build.win32bit.exeUpdate.name" value="${ant.project.name}_${build.version}-windows-32bit-update"/>
-
-
+	<property name="build.data.dir" value="${basedir}/buildData"/>
+	<property name="build.logos.dir" value="${build.data.dir}/logos"/>
+	<target name="init-fx-tasks">
+		<path id="fxant">
+			<filelist>
+				<file name="${java.home}\..\lib\ant-javafx.jar"/>
+				<file name="${java.home}\lib\jfxrt.jar"/>
+			</filelist>
+		</path>
+		
+		<taskdef resource="com/sun/javafx/tools/ant/antlib.xml"
+			uri="javafx:com.sun.javafx.tools.ant"
+			classpathref="fxant"/>
+	</target>
 
 	<path id="ByteNote.classpath">
 		<pathelement location="${build.bin}/"/>
@@ -40,19 +51,35 @@
 		<mkdir dir="${build.updateSite.dir}"/>
 		<echo file="${build.updateSite.dir}/requiredJREVersion" message="${java.specification.version}"/>
 		<echo file="${build.updateSite.dir}/versionName" message="${build.version}"/>
-		<copy file="${build.src.releaseNotes}"  tofile="${build.updateSite.dir}/releaseNotes.html"/>
-		<copy file="${build.logo}" tofile="${build.updateSite.dir}/logo.png"/>
+		<copy verbose="true" file="${build.src.releaseNotes}"  tofile="${build.updateSite.dir}/releaseNotes.html"/>
+		<copy file="${build.logos.dir}/logo256.png" tofile="${build.updateSite.dir}/logo.png"/>
 		<copy file="${build.jar.dir}/${build.jar.name}" tofile="${build.updateSite.dir}/updateJar.jar"/>
-		<copy file="${build.win32bit.exeUpdate.dir}/${build.win32bit.exeUpdate.name}.exe" tofile="${build.updateSite.dir}/windows32bit.exe"/>
+		<!--<copy file="${build.win32bit.exeUpdate.dir}/${build.win32bit.exeUpdate.name}.exe" tofile="${build.updateSite.dir}/windows32bit.exe"/>
+	-->
 	</target>
 	
-	<target depends="buildJar" name="buildWin32bitUpdateEXE">
+	<target depends="buildJar,init-fx-tasks" name="buildWin32bitBundle">
+		<echo></echo>
+		<fx:deploy nativeBundles="image" outdir="${build.win32bit.dir}/bundle" outfile="ByteNote"> 
+			<fx:application mainClass="bytenote.ByteNoteMain" name="ByteNote" version="${build.version}"/>
+			<fx:info title="ByteNote">
+				<fx:icon href="${build.data.dir}/logos.logoAll.ico"/>
+			</fx:info>
+			<fx:resources>
+				<fx:fileset type="jar" dir="${build.jar.dir}" >
+					<include name="${build.jar.name}"/>
+				</fx:fileset>
+			</fx:resources>
+		</fx:deploy>
+	</target>
+	
+	<target depends="buildWin32bitBundle" name="buildWin32bitUpdateEXE">
 		<!--
 			TODO: Add stuff here
 		 -->
 	</target>
 	
-	<target depends="buildJar" name="buildWin32bitEXEInstaller">
+	<target depends="buildWin32bitBundle" name="buildWin32bitEXEInstaller">
 		<!--
 			TODO: Add stuff here
 		-->
