--- a/build.xml
+++ b/build.xml
@@ -6,12 +6,12 @@
 	<property name="target" value="1.8"/>
 	<property name="source" value="1.8"/>
 	<property name="build.src" value="${basedir}/src"/>
-	<property name="build.version" value="v2.0.0-alpha"/>
+	<property name="build.version" value="2.0.0"/>
 	<property name="build.dir" value="${basedir}/build"/>
 	<property name="build.bin" value="${basedir}/bin"/>
 	<property name="build.src.releaseNotes" value="${build.src}/bytenote/releaseNotes.html"/>
 	<property name="build.jar.dir" value="${build.dir}/jar"/>
-	<property name="build.jar.name" value="${ant.project.name}_${build.version}.jar"/>
+	<property name="build.jar.name" value="${ant.project.name}_v${build.version}.jar"/>
 	<property name="build.jarUpdateModule.dir" value="ByteNoteJARUpdateModule/"/>
 	<property name="build.jarUpdateModule.jar" value="${build.jarUpdateModule.dir}/build/jar/ByteNoteJARUpdateModule.jar"/>
 	<property name="build.updateSite.url" value="https://thegreatgeek25.github.io/ByteNote/update"/>
@@ -19,9 +19,9 @@
 	<property name="build.data.dir" value="${basedir}/buildData"/>
 	<property name="build.win32bit.dir" value="${build.dir}/Windows/32bit"/>
 	<property name="build.win32bit.exeInstaller.dir" value="${build.win32bit.dir}/exeInstaller"/>
-	<property name="build.win32bit.exeInstaller.name" value="${ant.project.name}_${build.version}-windows-32bit"/>
+	<property name="build.win32bit.exeInstaller.name" value="${ant.project.name}_v${build.version}-windows-32bit"/>
 	<property name="build.win32bit.exeUpdate.dir" value="${build.win32bit.dir}/exeUpdate"/>
-	<property name="build.win32bit.exeUpdate.name" value="${ant.project.name}_${build.version}-windows-32bit-update"/>
+	<property name="build.win32bit.exeUpdate.name" value="${ant.project.name}_v${build.version}-windows-32bit-update"/>
 	<property name="build.win32bit.exeInstaller.script.file" value="${build.data.dir}/Windows/scripts/ByteNote-win32bit.iss"/>
 	<property name="build.win32bit.exeUpdate.script.file" value="${build.data.dir}/Windows/scripts/ByteNote-win32bit-update.iss"/>
 	<property name="build.logos.dir" value="${build.data.dir}/logos"/>
@@ -49,20 +49,23 @@
 		</ant>
 	</target>
 	
+	<target depends="buildUpdateSite,buildWin32bitEXEInstaller" name="buildWin">
+		
+	</target>
+	
 	<target depends="buildWin32bitUpdateEXE" name="buildUpdateSite">
 		<mkdir dir="${build.updateSite.dir}"/>
 		<echo file="${build.updateSite.dir}/requiredJREVersion" message="${java.specification.version}"/>
-		<echo file="${build.updateSite.dir}/versionName" message="${build.version}"/>
+		<echo file="${build.updateSite.dir}/versionName" message="v${build.version}"/>
 		<copy verbose="true" file="${build.src.releaseNotes}"  tofile="${build.updateSite.dir}/releaseNotes.html"/>
 		<copy file="${build.logos.dir}/logo256.png" tofile="${build.updateSite.dir}/logo.png"/>
 		<copy file="${build.jar.dir}/${build.jar.name}" tofile="${build.updateSite.dir}/updateJar.jar"/>
-		<!--<copy file="${build.win32bit.exeUpdate.dir}/${build.win32bit.exeUpdate.name}.exe" tofile="${build.updateSite.dir}/windows32bit.exe"/>
-	-->
+		<copy file="${build.win32bit.exeUpdate.dir}/${build.win32bit.exeUpdate.name}.exe" tofile="${build.updateSite.dir}/windows32bit.exe"/>
 	</target>
 	
 	<target depends="buildJar,init-fx-tasks" name="buildWin32bitBundle">
 		<fx:deploy verbose="true" nativeBundles="image" outdir="${build.win32bit.dir}/bundle" outfile="ByteNote"> 
-			<fx:application mainClass="bytenote.ByteNoteMain" name="ByteNote" version="${build.version}"/>
+			<fx:application mainClass="bytenote.ByteNoteMain" name="ByteNote" version="v${build.version}"/>
 			<fx:info title="ByteNote">
 				<fx:icon href="${build.data.dir}/logos/logoAll.ico" />
 			</fx:info>
@@ -82,7 +85,8 @@
 #define appName &quot;ByteNote&quot;
 #define appVersion &quot;${build.version}&quot;
 #define appExeName &quot;ByteNote.exe&quot;
-#define outputName &quot;${build.win32bit.exeUpdate.name}&quot;</echo>
+#define outputName &quot;${build.win32bit.exeUpdate.name}&quot;
+</echo>
 		<loadfile property="script" srcfile="${build.win32bit.exeUpdate.script.file}" />
 		<echo file="${build.dir}/Windows/32bit/temp/setupUpdate.iss" append="true" message="${script}"/>
 		<exec failonerror="true" executable="${env.INNOSETUP_HOME}/iscc" >
@@ -93,11 +97,12 @@
 	
 	<target depends="buildWin32bitBundle" name="buildWin32bitEXEInstaller">
 		<echo file="${build.dir}/Windows/32bit/temp/setup.iss">#define bundleDir &quot;${build.win32bit.dir}/bundle/bundles/ByteNote&quot;
-#define outputDir &quot;${build.win32bit.exeUpdate.dir}&quot;
+#define outputDir &quot;${build.win32bit.exeInstaller.dir}&quot;
 #define appName &quot;ByteNote&quot;
 #define appVersion &quot;${build.version}&quot;
 #define appExeName &quot;ByteNote.exe&quot;
-#define outputName &quot;${build.win32bit.exeUpdate.name}&quot;</echo>
+#define outputName &quot;${build.win32bit.exeInstaller.name}&quot;
+</echo>
 		<loadfile property="script" srcfile="${build.win32bit.exeInstaller.script.file}" />
 		<echo file="${build.dir}/Windows/32bit/temp/setup.iss" append="true" message="${script}"/>
 		<exec failonerror="true" executable="${env.INNOSETUP_HOME}/iscc" >
@@ -117,7 +122,7 @@
 		</java>
 	</target>
 	
-	<target depends="buildUpdateSite" name="default">
+	<target depends="buildJar" name="default">
 		
 	</target>
 	
