--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
 	<property name="target" value="1.8"/>
 	<property name="source" value="1.8"/>
 	<property name="build.src" value="${basedir}/src"/>
-	<property name="build.version" value="2.0.3"/>
+	<property name="build.version" value="2.0.4-alpha"/>
 	<property name="build.dir" value="${basedir}/build"/>
 	<property name="build.bin" value="${basedir}/bin"/>
 	<property name="build.src.releaseNotes" value="${build.src}/bytenote/releaseNotes.html"/>
@@ -25,6 +25,7 @@
 	<property name="build.win32bit.exeInstaller.script.file" value="${build.data.dir}/Windows/scripts/ByteNote-win32bit.iss"/>
 	<property name="build.win32bit.exeUpdate.script.file" value="${build.data.dir}/Windows/scripts/ByteNote-win32bit-update.iss"/>
 	<property name="build.logos.dir" value="${build.data.dir}/logos"/>
+	
 	<target name="init-fx-tasks">
 		<path id="fxant">
 			<filelist>
@@ -134,6 +135,7 @@
 			</manifest>
 		    <fileset dir="${build.bin}"/>
 			<fileset file="${build.jarUpdateModule.jar}"/>
+			<fileset file="${basedir}/LICENSE" />
 		</jar>
 	</target>
 	
@@ -156,6 +158,9 @@
 	<target name="clean">
 		<delete dir="${build.bin}"/>
 		<delete dir="${build.dir}"/>
+		<ant antfile="${build.jarUpdateModule.dir}/build.xml" target="clean">
+			<property name="jarUpdateBasedir" value="${basedir}/ByteNoteJARUpdateModule"/>
+		</ant>
 	</target>
 	
 	<target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
