--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
 	<property name="target" value="1.8"/>
 	<property name="source" value="1.8"/>
 	<property name="build.src" value="${basedir}/src"/>
-	<property name="build.version" value="2.0.4-alpha"/>
+	<property name="build.version" value="2.0.4"/>
 	<property name="build.dir" value="${basedir}/build"/>
 	<property name="build.bin" value="${basedir}/bin"/>
 	<property name="build.src.releaseNotes" value="${build.src}/bytenote/releaseNotes.html"/>
