--- a/build.xml
+++ b/build.xml
@@ -26,7 +26,7 @@
 	<property name="build.win32bit.exeUpdate.script.file" value="${build.data.dir}/Windows/scripts/ByteNote-win32bit-update.iss"/>
 	<property name="build.logos.dir" value="${build.data.dir}/logos"/>
 	
-	<property name="build.isVersionComplete" value="false"/>
+	<property name="build.isVersionComplete" value="true"/>
 	
 	<condition property="isVersionComplete">
 		<equals arg1="${build.isVersionComplete}" arg2="false" />
