Begin switching from ANT to Gradle and replace CRLF with LF

--- a/ByteNoteJARUpdateModule/.gitignore
+++ b/ByteNoteJARUpdateModule/.gitignore
@@ -1,5 +1,8 @@
-build/
+# Ignore Gradle project-specific cache directory
+.gradle
 
+# Ignore Gradle build output directory
+build
 
 # Created by https://www.gitignore.io/api/java,eclipse,intellij+all
 # Edit at https://www.gitignore.io/?templates=java,eclipse,intellij+all
